example/fail1.exp
fail1.coo:30:1: error: missing parent constructor A call
